--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="TA_IOT">
+  <meta name="apple-mobile-web-app-title" content="ta_iot">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>TATA DIGITAL IOT</title>
